# rust-image-dataset-fetcher

./: .cz.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTORS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
scripts/: cargo.sh
src/: cli.rs  main.rs
